<resources>
    <string name="app_name">ListIt</string>

    <!-- Pages headers labels -->
    <string name="mainpage_welcomelabel">Welcome</string>
    <string name="mainpage_defaultlist">My Default List :</string>
    <string name="login_label">Account Login</string>
    <string name="registration_label">Registration</string>

    <!-- Navigation Drawer menu labels -->
    <string name="drawer_item_default_list">My List</string>
    <string name="drawer_item_allLists">All Lists</string>
    <string name="drawer_item_newList">New list</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_contact">Contact Us</string>
    <string name="drawer_item_signout">Sign out</string>
    <string name="contact_subject">New message from ListIt app</string>
    <string name="no_email_clients">There is no email client installed.</string>
    <string name="select_email_message">Please select an mail app</string>
    <string name="signout_dialoge_title">Sign Out</string>
    <string name="signout_dialoge_message">Are you sure you want to sign out?</string>
    <string name="signout_dialoge_cancel">Cancel</string>
    <string name="signout_dialoge_ok">OK</string>

    <!-- Facebook configuration strings -->
    <string name="facebook_app_id">582817512064760</string>
    <string name="fb_login_protocol_scheme">fb582817512064760</string>

    <!-- Activities strings -->
    <string name="first_list_name">My first list</string>
    <string name="share_list_msg1">Here is the grocery list: </string>
    <string name="share_list_msg2">Have fun ;P</string>
    <string name="pick_share_option">Choose the app to share with</string>
    <string name="mainpage_share">Share List</string>
    <string name="mainpage_edittext_hint">Enter new product</string>
    <string name="enter_product_name_toast">Enter product</string>
    <string name="enter_note_toast">Note is empty</string>
    <string name="mainpage_deletechecked_btn">Delete checked</string>
    <string name="editproduct_label">Edit Item</string>
    <string name="editproduct_addPicture_label">Add Picture</string>
    <string name="editproduct_camera_label">Camera</string>
    <string name="editproduct_gallery_label">Gallery</string>
    <string name="editproduct_category_label">Category:</string>
    <string name="editproduct_category_toast">Category changed to:</string>
    <string name="editproduct_edittext_hint">Enter note</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_forgotpassword_text">Forgot password?</string>
    <string name="login_signinBtn_text">Sign in</string>
    <string name="login_register_text">Register</string>
    <string name="register_cancelBtn_text">Cancel</string>
    <string name="register_confirmBtn_text">Confirm</string>
    <string name="register_name_hint">Name</string>
    <string name="register_email_hint">User Email</string>
    <string name="register_password1_hint">Password</string>
    <string name="register_password2_hint">Re-enter password</string>
    <string name="category_dialoge_label">Choose Category</string>
    <string name="adding_product_toexisting">Added quantity to your existing product</string>
    <string name="pressagain_toast">Press again to exit app</string>
    <string name="loginToUseApp">Please login to use the app</string>

    <!-- Categories strings -->
    <string name="category_others">Others</string>
    <string name="category_meatnfish">Meat &amp; Fish</string>  <!-- -->
    <string name="category_dairy">Dairy</string>  <!-- -->
    <string name="category_fruitsnvegs">Fruits &amp; Veggatables</string>  <!-- -->
    <string name="category_beverages">Beverages</string>
    <string name="category_basicproducts">Basic Products</string>  <!-- -->
    <string name="category_saucesnspices">Sauces &amp; Spices</string>
    <string name="category_soupsncleaning">Soups &amp; Cleaning products</string>
    <string name="category_snacks">Snacks</string>
    <string name="category_officesupply">Office Supply</string>
    <string name="category_breadnbakery">Bread &amp; Bakery</string>
    <string name="category_healthnbeauty">Health &amp; Beauty</string>
    <string name="category_cereal">Cereal</string>

    <string-array name="category_names">
        <item>Meat &amp; Fish</item>
        <item>Others</item>
        <item>Dairy</item>
        <item>Fruits &amp; Veggatables</item>
        <item>Beverages</item>
        <item>Basic Products</item>
        <item>Sauces &amp; Spices</item>
        <item>Snacks</item>
        <item>Soups &amp; Cleaning products</item>
        <item>Office Supply</item>
        <item>Bread &amp; Bakery</item>
        <item>Health &amp; Beauty</item>
        <item>Cereal</item>
    </string-array>

    <!-- Demo Products strings -->
    <string name="product_chicken_breast">Chicken breast</string>
    <string name="product_ice_cream">Ice cream</string>
    <string name="product_oranges">Oranges</string>

    <!-- Demo Products notes strings -->
    <string name="note_ergent">ERGENT!</string>
    <string name="note_allout">We\'re all outt!</string>
    <string name="note_anyone">Anyone getting?!</string>

    <!--Products-->
    <string-array name="meatnfishproducts_names">
        <item>Meat</item>
        <item>Chicken breast</item>
        <item>Fish</item>
    </string-array>

    <string-array name="dairyproducts_names">
        <item>Milk</item>
        <item>Cheese</item>
    </string-array>

    <string-array name="fruitsnvegsproducts_names">
        <item>Tomato</item>
        <item>Cucumber</item>
        <item>Lemon</item>
    </string-array>

    <string-array name="basicproducts_names">
        <item>Sugar</item>
        <item>Flour</item>
        <item>Bread</item>
    </string-array>


</resources>
