<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5fb0c9"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        style="@style/ToolBarStyle"
        android:theme="@style/ToolBarStyle"
        android:background="@color/colorPrimary"
        />

    <TextView
        android:id="@+id/mainactivity_list_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainpage_defaultlist"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="@dimen/mainactivity_listname_topmargin"
        android:layout_marginStart="@dimen/mainactivity_startmargin"
        android:textColor="#fff"
        android:textSize="@dimen/mainactivity_listname_textsize"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/mainactivity_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:text="@string/mainpage_share"
        android:layout_marginTop="@dimen/mainactivity_listname_topmargin"
        android:layout_marginEnd="@dimen/activity_endmargin"
        android:layout_alignParentEnd="true"
        android:textColor="#d67601"
        android:clickable="true"
        android:textSize="@dimen/mainactivity_default_textsize"
        android:textStyle="bold"/>

    <RelativeLayout
        android:id="@+id/mainactivity_addproduct_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainactivity_list_name"
        android:layout_marginTop="@dimen/editactivity_addnotelayout_topmargin">

    <com.appit.listit.UIandViews.CustomAutoCompleteView
        android:id="@+id/newProduct_editText"
        android:layout_width="@dimen/mainactivity_edittext_width"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:hint="@string/mainpage_edittext_hint"
        android:completionThreshold="1"
        android:text=""
        android:textAlignment="viewStart"
        android:textColor="#fff"
        android:drawableTint="#006fff"
        android:layout_marginStart="@dimen/mainactivity_edittext_startmargin"
        android:textColorHint="#fff"
        android:maxLines="1"
        android:inputType="text"/>

    <Button
        android:id="@+id/newProductBtn"
        android:layout_width="@dimen/activity_addbtn_width"
        android:layout_height="@dimen/activity_addbtn_hieght"
        android:layout_toEndOf="@id/newProduct_editText"
        android:background="@drawable/ic_add_circle_24dp"
        android:layout_marginStart="@dimen/mainactivity_startmargin"
        android:onClick="addProduct"
        android:layout_centerVertical="true"/>

        </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/mainactivity_listlayout_hieght"
        android:layout_below="@+id/mainactivity_addproduct_layout"
        android:layout_margin="@dimen/mainactivity_margin"
        android:elevation="8dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/productsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/sublist_view"
            android:layout_centerHorizontal="true"
            android:divider="@color/trans"
            android:dividerHeight="1px"/>

    </RelativeLayout>

    <Button
        android:id="@+id/clearCheckedBtn"
        android:layout_width="@dimen/mainactivity_clearCheckedBtn_width"
        android:layout_height="wrap_content"
        android:text="@string/mainpage_deletechecked_btn"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:onClick="clearBtn"
        android:textAllCaps="false"
        android:layout_marginBottom="@dimen/mainactivity_bottommargin"
        android:background="#d67601"
        android:textColor="#fff"
        android:textSize="@dimen/mainactivity_default_textsize"/>

</RelativeLayout>